# Magic-eye

./: .eslintignore  .eslintrc  .gitattributes  .gitignore  .mesonpy-native-file.ini  .pnp.cjs  .prettierignore  .prettierrc  CamViewerRtsp.spec  Camip.desktop  LICENSE  Magic Eye.desktop  MagicEye.desktop  MagicEye.py  Makefile  PKGBUILD  README copy.md  README.md  build.sh  cargo-sources.json  client.py  host.py  index.html  install  install.sh  main.py  meson.build  node-sources.json  org.magic-eye.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  settings.py  setup.py  splashscreen.html  tailwind.config.js  test.py  tsconfig.json  (+1 more)
.github/: dependabot.yml  release.yaml
.github/workflows/: format.yml  release.yaml
CamViewer/: host.py  main.py  server.py  settings.py
CamViewerRtsp/: ModeUI.py  example.conf  host.py  optionGUI.py  server.py  settings.py  test.py
Camip/: Camip.desktop  camip.py  client.py  server.py  settings.py
MagicEye/: Magic Eye.desktop  Magic Eye.spec  MagicEye.py  Makefile  client.py  server.py  settings.py
docker/: Dockerfile  httpServer.py  server.py
docker/server/: Cargo.toml  Dockerfile  index.html  nginx.conf  note.md
src/: App.css  App.tsx  MagicEye.py  client.py  main.tsx  router.tsx  server.py  settings.py  styles.css
src-tauri/: Cargo.toml  settings.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/assets/: placeholder-bar.webm  placeholder-black.webm  placeholder-blue.webm  placeholder-checkers-1.webm  placeholder-checkers-4.webm  placeholder-checkers-8.webm  placeholder-colors.webm  placeholder-gradient.webm  placeholder-green.webm  placeholder-red.webm  placeholder-smpte100.webm  placeholder-white.webm
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/server/: mod.rs  server_config.rs  server_http_verb.rs
src-tauri/src/utils/: browser.rs  config.rs  get_ip.rs  mod.rs  os_setup_and_info.rs  window_function.rs
src/assets/: placeholder-ball.webm  placeholder-checkers-2.webm  placeholder-chroma-zone-plate.webm  placeholder-circular.webm  placeholder-pinwheel.webm  placeholder-smpte.webm  placeholder-smpte75.webm  placeholder-snow.webm  placeholder-solid-color.webm  placeholder-spokes.webm  placeholder-zone-plate.webm
src/components/ListBox/: listBox.tsx  listView.tsx
src/components/alert/: sucessAlert.tsx
src/components/checkBox/: checkBox.tsx
src/components/context/: themeContext.tsx
src/components/dropdowns/: dropdown.tsx
src/components/inputNumber/: inputNumber.tsx
src/components/loader/: loader.tsx
src/components/modals/: modalAbout.tsx  modalConfirm.tsx
src/components/notification/: notification.tsx
src/components/sideMenu/: sideMenu.tsx
src/components/titlebar/: titlebar.tsx
src/components/toast/: Toast.tsx  errorToast.tsx  toast.tsx
src/components/toggle/: toggle.tsx
src/components/videoFrame/: gstFrame.tsx
src/components/videoPlayer/: placeholderStream.tsx  videoPlayer.tsx
src/interfaces/: IAlert.ts  ICheckbox.ts  IDropdown.ts  IListView.ts  IListbox.ts  IMenuItem.ts  IModal.ts  IServer.ts  ISetting.ts  IToast.ts  IToggle.ts  IVideoPlayer.ts
src/types/: serverInfo.d.ts  settingApp.d.ts
src/ui/: AboutSection.py  Ui.py
src/utils/: WindowSize.tsx
src/utils/animation/: alertAnimation.ts  hamburgerMenuAnimation.ts  screenAnimation.ts  toastAnimation.ts
src/utils/hooks/: ServerData.tsx
src/views/: Server.tsx  Settings.tsx  route.tsx  settings.json
src/views/ServerInfoView/: HlsServerInfo.tsx  RtmpServerInfo.tsx  RtmpsServerInfo.tsx  RtspServerInfo.tsx  RtspsServerInfo.tsx  SrtServerInfo.tsx  WebrtcServerInfo.tsx
src/views/appSetting/: appSetting.tsx
src/views/loadingScreen/: loadingScreen.tsx
src/views/serverSetting/: ApiSetting.tsx  LoggingSetting.tsx  RecordSetting.tsx  RtmpSetting.tsx  RtspSetting.tsx  ServerSettings.tsx  SrtSetting.tsx  hlsSetting.tsx  webrtcSetting.tsx
style/: header.xml
tests/: IAlert.test.ts  checkbox.test.tsx  listView.test.tsx  loader.test.tsx  mainWindow.test.ts  notification.test.tsx  placeholderStream.test.tsx  server.test.tsx  serverData.test.tsx  setting.test.tsx  sideMenu.test.tsx  successAlert.test.tsx  titlebar.test.tsx  toastAnimation.test.ts  toggle.test.tsx
tools/: fetch.py  patterntool.py
