[build-system]
build-backend = 'mesonpy'
requires = [
 'meson-python',
]


[project]

name = 'CamViewerRtsp'
version = '0.5'
description = 'CamViewerRtsp gui tool '
readme = 'README.md'
license = { file = 'LICENSE' }
keyword = ['GUI', 'Camera', 'Rtsp']
authors = [
  { name = 'Thomas Toulouse' },
]
classifiers = [
  'Development Status :: 4 - Beta',
  'Programming Language :: Python',
]

requires-python = '>=3.7'
