[package]
name = "magic_eye"
version = "0.9.3"
description = "A small gui application Made with Tauri, let you watch stream for a Mediamtx server."
categories = ["utility", "network", "streaming"]
authors = ["Thomas Toulouse"]
license = "MIT"
repository = "https://github.com/Sir-Thom/Magic-eye"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 


#[patch.crates-io]
#tauri = { git = "https://github.com/tauri-apps/tauri", branch = "dev" }
#tauri-build = { git = "https://github.com/tauri-apps/tauri", branch = "dev" }

[build-dependencies]
tauri-build = { version = "2.0.0-beta.10", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.13", features = [] }

tauri-plugin-log = { version = "2.0.0-beta.1" }
tauri-plugin-fs = {  version = "2.0.0-beta.1" }
tauri-plugin-http = "2.0.0-beta.1"
tauri-plugin-os = {  version = "2.0.0-beta.1" }
tauri-plugin-process = { version = "2.0.0-beta.1" }
dirs-next = "2.0.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
#reqwest = "^0.11.23"
open = "5.1.2"
log = "0.4.21"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]
