[package]
name = "rtmp_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


actix-web = "4.3.1"
tokio = { version = "1", features = ["full"] }
gstreamer = "0.20.3"
gstreamer-app = "0.20.0"
dotenv = "0.15.0"
utoipa = "3"
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
webrtc = "0.7.3"
futures = "0.3.8"
onvif = { git = "https://github.com/lumeohq/onvif-rs" }
tokio-stream = "0.1"
tracing = "0.1.26"
futures-core = "0.3.8"
tracing-subscriber = "0.3.16"
futures-util = "0.3.8"
serde_json = "1.0"
serde = "1.0"
serde_urlencoded = "0.7"
rand = "0.8.4"
